compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__let_last.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "pub fn main() {\n  let x = 1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  let x = 1
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func Main() gleam_P.Int_t {
  var x gleam_P.Int_t = 1
  _ = x
  return x
}
