compiler-core/src/go/tests/snapshots/gleam_core__go__tests__functions__reserved_word_fn.snap
---
source: compiler-core/src/go/tests/functions.rs
expression: "fn func() {\n  Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
fn func() {
  Nil
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func funcʹ() gleam_P.Nil_t {
  return gleam_P.Nil_c{}
}
